<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/ic_background_third_fragment">


    <TextView
        android:id="@+id/registr_text_Wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/welcome_onboard"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmailRegistration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email_hint"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPasswordRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        app:hintTextColor="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="5dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmailRegistration"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEmailRegistration"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmailRegistration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutConfirmPasswordRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="5dp"
        app:boxStrokeWidth="0dp"
        android:hint="@string/confirm_password"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutPasswordRegistration"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutPasswordRegistration"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPasswordRegistration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/Register_button"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/buttom"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutConfirmPasswordRegistration"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutConfirmPasswordRegistration"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmPasswordRegistration"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/Register_button"
        app:layout_constraintEnd_toEndOf="@+id/Register_button"
        app:layout_constraintStart_toStartOf="@+id/Register_button">

    </LinearLayout>

    <TextView
        android:id="@+id/textViewRegisterAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/Register_button"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="@+id/Register_button"
        app:layout_constraintTop_toBottomOf="@+id/Register_button" />

    <TextView
        android:id="@+id/textViewRegisterSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in"
        android:textColor="@color/buttom"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Register_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewRegisterAccount"
        app:layout_constraintTop_toBottomOf="@+id/Register_button" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/registr_text_Wellcome"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/registr_text_Wellcome"
        app:layout_constraintTop_toBottomOf="@+id/registr_text_Wellcome"
        app:srcCompat="@drawable/ic_registration_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>